--- a/Flamingo_API/appsettings.json
+++ b/Flamingo_API/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "ValidAudience": "https://localhost:7140",
+    "ValidIssuer": "https://localhost:7140",
+    "Secret": "AirwaysSecretFlamingo@123333@123132131313131313131231231312313123131231231313123"
+  },
   "ConnectionStrings": {
     "nwcnString": "Data Source=TRPRDQA12N0H-L\\SQLEXPRESS;Initial Catalog=FlamingoAirwaysDB;Integrated Security=True; Trust Server Certificate=True"
   }
